# XRayMClib

./: .readthedocs.yaml  CMakeLists.txt  README.md
data/: CMakeLists.txt
data/EPICSParser/: atomicelementhandler.cpp  epicsparser.cpp  epicsparsermain.cpp
data/EPICSParser/include/: atomicelementhandler.hpp  epicsparser.hpp
data/protobuff/: CMakeLists.txt  dosecollection.proto
docs/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: about.rst  conf.py  index.rst  license.rst  physicsmodel.rst
examples/: CMakeLists.txt
examples/carm/: CMakeLists.txt  carm.cpp  carmctdi.cpp  phantomreader.cpp  phantomreader.hpp
examples/cudatransport/: CMakeLists.txt  cudatransport.cpp
examples/donut/: CMakeLists.txt  donut.cpp
examples/filledcylinder/: CMakeLists.txt  filledcylinder.hpp  filledcylinderexample.cpp
examples/pencilbeam/: CMakeLists.txt  pencilbeam.cpp
include/dxmc/: dxmcrandom.hpp  interactions.hpp  interpolation.hpp  transport.hpp
include/dxmc/beams/: cbctbeam.hpp  ctdibeam.hpp  ctsequentialbeam.hpp  ctspiralbeam.hpp  ctspiraldualenergybeam.hpp  dxbeam.hpp  isotropicbeam.hpp  isotropicbeamcircle.hpp  isotropiccircularbeam.hpp  isotropiccircularmonoenergybeam.hpp  isotropicmonoenergybeam.hpp  isotropicmonoenergybeamcircle.hpp
include/dxmc/beams/tube/: tube.hpp
include/dxmc/beams/utilities/: spheresamplingcircularfield.hpp  spheresamplingrectangularfield.hpp
include/dxmc/material/: atomicshell.hpp  atomserializer.hpp  material.hpp
include/dxmc/world/: energyscore.hpp  world.hpp
include/dxmc/world/basicshapes/: aabb.hpp  cylinder.hpp  tetrahedron.hpp
include/dxmc/world/collisions/: collisiontest.hpp  meshcollision.hpp
include/dxmc/world/visualization/: visualizeworld.hpp
include/dxmc/world/worlditems/: aavoxelgrid.hpp  ctdiphantom.hpp  depthdose.hpp  enclosedroom.hpp  fluencescore.hpp  tetrahedalmesh.hpp  tetrahedalmesh2.hpp  triangulatedmesh.hpp  triangulatedopensurface.hpp  worldbox.hpp  worldboxgrid.hpp  worldcylinder.hpp  worldsphere.hpp
include/dxmc/world/worlditems/tetrahedalmesh/: tetrahedalmeshcollection.hpp  tetrahedalmeshdata.hpp  tetrahedalmeshgrid.hpp  tetrahedalmeshreader.hpp  tetrahedron.hpp
include/dxmc/world/worlditems/tetrahedalmesh2/: tetrahedalmeshdata.hpp  tetrahedalmeshgrid2.hpp  tetrahedalmeshreader2.hpp
include/dxmc/world/worlditems/triangulatedmesh/: triangulatedmeshkdtreeflat.hpp
include/xraymc/: constants.hpp  floating.hpp  interactions.hpp  interpolation.hpp  particle.hpp  particletracker.hpp  serializer.hpp  transport.hpp  transportprogress.hpp  vectormath.hpp  xraymc.hpp  xraymcrandom.hpp
include/xraymc/beams/: beamtype.hpp  cbctbeam.hpp  ctdibeam.hpp  ctsequentialbeam.hpp  ctspiralbeam.hpp  ctspiraldualenergybeam.hpp  dxbeam.hpp  flatmonoenergyfield.hpp  isotropicbeam.hpp  isotropicbeamcircle.hpp  isotropiccircularbeam.hpp  isotropiccircularmonoenergybeam.hpp  isotropicmonoenergybeam.hpp  isotropicmonoenergybeamcircle.hpp  pencilbeam.hpp
include/xraymc/beams/filters/: bowtiefilter.hpp  ctaecfilter.hpp  ctorganaecfilter.hpp
include/xraymc/beams/tube/: betheHeitlerCrossSection.hpp  tube.hpp
include/xraymc/beams/utilities/: spheresamplingcircularfield.hpp  spheresamplingrectangularfield.hpp
include/xraymc/cuda/: cuda_transport.hpp  cuda_types.cuh
include/xraymc/material/: atomhandler.hpp  atomicelement.hpp  atomicshell.hpp  atomserializer.hpp  material.hpp  nistmaterials.hpp
include/xraymc/world/: dosescore.hpp  energyscore.hpp  kdtree.hpp  kdtreeflat.hpp  kdtreeintersectionresult.hpp  statickdtree.hpp  visualizationintersectionresult.hpp  world.hpp  worldintersectionresult.hpp
include/xraymc/world/basicshapes/: aabb.hpp  cylinder.hpp  cylinderz.hpp  sphere.hpp  tetrahedron.hpp
include/xraymc/world/collisions/: collisiontest.hpp  meshcollision.hpp
include/xraymc/world/visualization/: visualizeworld.hpp  vizualizationprops.hpp
include/xraymc/world/worlditems/: aavoxelgrid.hpp  ctdiphantom.hpp  depthdose.hpp  enclosedroom.hpp  flatdetector.hpp  fluencescore.hpp  personaldosimeter.hpp  tetrahedalmesh.hpp  tetrahedalmesh2.hpp  tetrahedalmesh3.hpp  triangulatedmesh.hpp  triangulatedopensurface.hpp  worldbox.hpp  worldboxgrid.hpp  worldcylinder.hpp  worlditemtype.hpp  worldsphere.hpp
include/xraymc/world/worlditems/tetrahedalmesh/: tetrahedalmeshcollection.hpp  tetrahedalmeshcontourkdtree.hpp  tetrahedalmeshdata.hpp  tetrahedalmeshgrid.hpp  tetrahedalmeshkdtree.hpp  tetrahedalmeshreader.hpp  tetrahedron.hpp
include/xraymc/world/worlditems/tetrahedalmesh2/: tetmeshouterkdtreeflat.hpp  tetrahedalmeshgrid2.hpp
include/xraymc/world/worlditems/tetrahedalmesh3/: tetrahedalmeshcontourkdtree.hpp  tetrahedalmeshcontouroctree.hpp
include/xraymc/world/worlditems/triangulatedmesh/: triangle.hpp  triangulatedmeshkdtree.hpp  triangulatedmeshkdtreeflat.hpp  triangulatedmeshkdtreetype.hpp  triangulatedmeshstlreader.hpp
src/cuda/: aavoxelgrid_cuda.cu
tests/: CMakeLists.txt  testbasicshapes.cpp  testbeamfilters.cpp  testbeams.cpp  testcollision.cpp  testctaecfilter.cpp  testctdiphantom.cpp  testdirectionsampler.cpp  testflatdetector.cpp  testfluencescore.cpp  testinteractions.cpp  testinterpolation.cpp  testmassenergytransfer.cpp  testmaterials.cpp  testmaterialshellscatter.cpp  testpersonaldosimeter.cpp  testrandom.cpp  testserializer.cpp  testtetrahedalmesh.cpp  testtetrahedalmesh2.cpp  testtetrahedalmeshreader.cpp  testtransport.cpp  testtriangulatedmesh.cpp  testtube.cpp  testvectormath.cpp  testvisualization.cpp  testvoxelgrid.cpp  testworld.cpp  testworlditems.cpp  testworldsphere.cpp
validation/: CMakeLists.txt  scatterPlots.py  scattervalidation.cpp  tg195world3breast.hpp  tg195world42.hpp  validation.cpp  validationPlots.py
validation/data/: TG195results.txt  tiffToBin.py
